Remove deprecated distance-function
changelog: The function `distance` has been been replaced by `point.distance`